# YAFFS-ESP32-sample

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/yaffs/: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
components/yaffs/include/: yaffs.h
components/yaffs/port/: yaffs_osglue.c  ydirectenv.h
components/yaffs/src/: yaffs_guts.c
datasheets/: W25N04KV.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  w25n_yaffs_drv.c  w25n_yaffs_drv.h
